--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
 </head>
 <body>
     <div class="overlay" data-overlay>
-        <div class="message">Game Over</div>
+        <div class="message" data-message></div>
+        <button data-reset>Play Again</button>
     </div>
     <div class="stickman-wrapper">
         <section class="board" data-board>
             <canvas id="stickman" data-stickman>This Text will show if the Browser does NOT support HTML5 Canvas tag</canvas>
         </section>
         <section class="info-wrapper">
-            <div>
+            <div class="info-data">
                 <p>Right:</p>
                 <div data-right class="good-answer"></div>
             </div>
             
-            <div>
-                <p>Wrong:</p>
-                <div data-guesses class="bad-answer"></div>
+            <div class="info-data">
+                <p>Guessed:</p>
+                <div data-guesses class="all-guesses"></div>
             </div>
             
             <section data-guess>
